--- a/polybar/config
+++ b/polybar/config
@@ -94,9 +94,9 @@ font-1 = unifont:fontformat=truetype:size=8:antialias=false;0
 font-2 = siji:pixelsize=10;1
 font-3 = FontAwesome:size=10:weight=Regular
 
-modules-left =  appmenu arch updates cpu temperature fan memory wlan gmail  
+modules-left =  appmenu arch updates cpu temperature fan memory wlan 
 modules-center = hlws
-modules-right = mpd volume weather battery xkeyboard date powermenu
+modules-right = spotify mpd volume gmail weather battery xkeyboard date powermenu
 
 tray-position = right
 tray-padding = 4
@@ -612,6 +612,13 @@ format-prefix = " "
 format-prefix-foreground = ${colors.foreground-alt}
 exec = echo "Menu"
 click-left = "jgmenu_run >/dev/null 2>&1 &"
+
+[module/spotify]
+type = custom/script
+exec = ~/.config/polybar/spotify.sh
+click-left = playerctl -p spotify play-pause
+tail = true
+interval = 2
 
 
 [module/powermenu]
