--- a/polybar/config
+++ b/polybar/config
@@ -94,9 +94,9 @@ font-1 = unifont:fontformat=truetype:size=8:antialias=false;0
 font-2 = siji:pixelsize=10;1
 font-3 = FontAwesome:size=10:weight=Regular
 
-modules-left =  appmenu arch updates cpu temperature fan memory wlan 
+modules-left =  appmenu info-trash arch updates cpu temperature fan memory wlan info-hackspeed spotify
 modules-center = hlws
-modules-right = spotify mpd volume gmail weather battery xkeyboard date powermenu
+modules-right = mpd volume gmail weather info-redshift-temp battery xkeyboard date powermenu
 
 tray-position = right
 tray-padding = 4
@@ -274,7 +274,7 @@ type = internal/mpd
 host = localhost
 port = 6600
 label-song = %title%
-format-online =  <label-song>  <icon-prev>  <icon-stop> <toggle>  <icon-next>  <bar-progress>
+format-online =  <label-song>  <icon-prev>  <icon-stop> <toggle>  <icon-next>  <bar-progress>
 
 icon-prev = 
 icon-stop = 
@@ -289,7 +289,7 @@ toggle-off-foreground = #55
 
 
 ; Only applies if <bar-progress> is used
-bar-progress-width = 20
+bar-progress-width = 5
 bar-progress-indicator = 
 bar-progress-fill = 
 bar-progress-empty = 
@@ -300,11 +300,12 @@ label-song-ellipsis = true
 
 [module/xbacklight]
 type = internal/xbacklight
+output = HDMI1
 
 format-prefix = ""
 format-prefix-foreground = ${colors.foreground-alt}
 format = <label> <bar>
-label = 
+label = %percentage%%
 
 bar-width = 10
 bar-indicator = |
@@ -640,6 +641,31 @@ menu-0-1-exec = gksudo reboot
 menu-0-2 =  power off
 menu-0-2-exec = gksudo poweroff
 
+[module/info-redshift-temp]
+type = custom/script
+exec = ~/.config/polybar/info-redshift-temp.sh
+interval = 5
+
+[module/info-trash]
+type = custom/script
+format-prefix = " " 
+format-prefix-foreground = ${colors.foreground-alt}
+format = <label>
+format-underline = #4bffdc
+label = "%output:0:30%"
+exec = ~/.config/polybar/info-trash.sh
+interval = 60
+click-left = ~/.config/polybar/info-trash.sh --clean
+
+[module/info-hackspeed]
+type = custom/script
+format-prefix = " " 
+format-prefix-foreground = ${colors.foreground-alt}
+format = <label>
+format-underline = #4bffdc
+label = "%output:0:30%"
+exec = ~/.config/polybar/info-hackspeed.sh
+tail = true
 
 [settings]
 screenchange-reload = true
