--- a/polybar/config
+++ b/polybar/config
@@ -47,8 +47,8 @@ padding-right = 2
 module-margin-left = 1
 module-margin-right = 1
 
-#font-0 = DejaVu Sans Mono:size=9;1
-font-0 = Droid Sans Mono:size=10;1
+font-0 = Comic Sans MS:size=10:weight=Italic
+#font-0 = Droid Sans Mono:size=10;1
 font-1 = unifont:fontformat=truetype:size=8:antialias=false;0
 font-2 = siji:pixelsize=10;1
 font-3 = FontAwesome:size=10:weight=Regular
@@ -88,15 +88,15 @@ padding-right = 0
 module-margin-left = 1
 module-margin-right = 1
 
-#font-0 = DejaVu Sans Mono:size=9;1
-font-0 = Droid Sans Mono:size=10;1
+font-0 = Comic Sans MS:size=10:weight=Italic
+#font-0 = Droid Sans Mono:size=10;1
 font-1 = unifont:fontformat=truetype:size=8:antialias=false;0
 font-2 = siji:pixelsize=10;1
 font-3 = FontAwesome:size=10:weight=Regular
 
-modules-left =  appmenu info-trash arch updates cpu temperature fan memory wlan info-hackspeed spotify
+modules-left = info-trash arch system-uptime-pretty updates cpu temperature fan memory wlan info-hackspeed mpd spotify
 modules-center = hlws
-modules-right = mpd volume gmail weather info-redshift-temp battery xkeyboard date powermenu
+modules-right = news-arch volume gmail weather info-redshift-temp battery xkeyboard date powermenu
 
 tray-position = right
 tray-padding = 4
@@ -245,7 +245,7 @@ format-padding = 2
 type = internal/xkeyboard
 blacklist-0 = num lock
 
-format-prefix = " "
+;format-prefix = " "
 format-prefix-foreground = ${colors.foreground-alt}
 format-prefix-underline = ${colors.secondary}
 
@@ -273,8 +273,12 @@ label-unmounted-foreground = ${colors.foreground-alt}
 type = internal/mpd
 host = localhost
 port = 6600
+format-online-underline = #ffb52a
 label-song = %title%
-format-online =  <label-song>  <icon-prev>  <icon-stop> <toggle>  <icon-next>  <bar-progress>
+label-song-foreground = #ff
+;format-online-prefix = " "
+format-online =  <label-song>  <icon-prev>  <icon-stop> <toggle>  <icon-next>
+format-online-foreground = ${colors.foreground-alt}
 
 icon-prev = 
 icon-stop = 
@@ -329,7 +333,7 @@ interval = 2
 format = <label> <ramp-coreload>
 format-prefix = " "
 format-prefix-foreground = ${colors.foreground-alt}
-format-underline = #f90000
+format-underline = #ffb52a
 label = %percentage%%
 ramp-coreload-0 = ▁
 ramp-coreload-0-font = 2
@@ -487,10 +491,14 @@ label = %date% %time%
 
 [module/volume]
 type = internal/volume
-
-format-volume = <label-volume> <bar-volume>
-label-volume = 
-label-volume-foreground = ${colors.foreground-alt}
+format = <label> <bar-used>
+format-volume-prefix = " "
+format-volume-prefix-foreground = ${colors.foreground-alt}
+format-volume-underline = #9f78e1
+format-volume = <bar-volume>
+;label-volume = 
+;label-volume-foreground = ${colors.foreground-alt}
+;label-volume-underline = #9f78e1
 
 format-muted-prefix = " "
 format-muted-foreground = ${colors.foreground-alt}
@@ -603,6 +611,7 @@ exec = .config/polybar/fan.sh
 
 [module/gmail]
 type = custom/script
+format-underline = #4bffdc
 exec = ~/.config/polybar/gmail/launch.py
 tail = true
 click-left = xdg-open https://mail.google.com
@@ -616,6 +625,9 @@ click-left = "jgmenu_run >/dev/null 2>&1 &"
 
 [module/spotify]
 type = custom/script
+format-prefix = " "
+format-prefix-foreground = ${colors.foreground-alt}
+format-underline = #f50a4d
 exec = ~/.config/polybar/spotify.sh
 click-left = playerctl -p spotify play-pause
 tail = true
@@ -643,6 +655,7 @@ menu-0-2-exec = gksudo poweroff
 
 [module/info-redshift-temp]
 type = custom/script
+format-underline = #4bffdc
 exec = ~/.config/polybar/info-redshift-temp.sh
 interval = 5
 
@@ -666,6 +679,25 @@ format-underline = #4bffdc
 label = "%output:0:30%"
 exec = ~/.config/polybar/info-hackspeed.sh
 tail = true
+
+[module/system-uptime-pretty]
+type = custom/script
+format-prefix = " " 
+format-prefix-foreground = ${colors.foreground-alt}
+format = <label>
+format-underline = #0a6cf5
+exec = ~/.config/polybar/system-uptime-pretty.sh
+interval = 30
+
+[module/news-arch]
+type = custom/script
+format-prefix = " " 
+format-prefix-foreground = ${colors.foreground-alt}
+format = <label>
+format-underline = #0a6cf5
+exec = ~/.config/polybar/info-archnews.py
+interval = 40
+click-left = xdg-open https://www.newsbeast.gr
 
 [settings]
 screenchange-reload = true
