--- a/polybar/config
+++ b/polybar/config
@@ -95,7 +95,8 @@ font-2 = siji:pixelsize=10;1
 font-3 = FontAwesome:size=10:weight=Regular
 
 modules-left = info-trash arch system-uptime-pretty updates cpu temperature fan memory wlan info-hackspeed mpd spotify
-modules-center = hlws
+modules-center = ewmh
+;hlws
 modules-right = news-arch volume gmail weather info-redshift-temp battery xkeyboard date powermenu
 
 tray-position = right
@@ -208,16 +209,16 @@ label-active-underline = #9fbc00
 ; ;   %icon%
 ; ;   %index%
 ; ; Default: %icon%  %name%
-label-occupied = %icon%  %name%
+label-occupied = %name%
 label-occupied-underline = #555555
-label-occupied-foreground = #ffffff
+label-occupied-foreground = #55
 ;
 ; ; Available tokens:
 ; ;   %name%
 ; ;   %icon%
 ; ;   %index%
 ; ; Default: %icon%  %name%
-label-urgent = %icon%  %name%
+label-urgent = %name%!
 label-urgent-foreground = #000000
 label-urgent-background = #bd2c40
 label-urgent-underline = #9b0a20
@@ -227,7 +228,7 @@ label-urgent-underline = #9b0a20
 ; ;   %icon%
 ; ;   %index%
 ; ; Default: %icon%  %name%
-label-empty = %icon% %name%
+label-empty = %icon%
 label-empty-foreground = #55
 
 
