--- a/polybar/config
+++ b/polybar/config
@@ -54,13 +54,13 @@ font-2 = siji:pixelsize=10;1
 font-3 = FontAwesome:size=10:weight=Regular
 font-4 = DejaVu Sans:size=10
 
-modules-left = arch updates cpu temperature fan memory 
-modules-center = hlws
+modules-left = arch updates cpu temperature fan memory isrunning-openvpn
+modules-center = ewmh
 modules-right = volume wlan gmail weather battery xkeyboard date
 
-#tray-position = right
-#tray-padding = 4
-#tray-maxsize = 16
+tray-position = right
+tray-padding = 4
+tray-maxsize = 16
 
 [bar/my-awesome-polybar1]
 monitor = ${env:MONITOR:HDMI1}
@@ -96,7 +96,7 @@ font-2 = Wuncon Siji:pixelsize=10:weight=Regular;1
 font-3 = FontAwesome:size=10:weight=Regular
 font-4 = DejaVu Sans:size=10
 
-modules-left =  info-trash arch system-uptime-pretty updates cpu temperature fan memory wlan isrunning-openvpn info-hackspeed taskwarrior
+modules-left =  info-trash arch system-uptime-pretty updates cpu temperature fan memory wlan isrunning-openvpn taskwarrior
 modules-center = ewmh
 ;hlws
 modules-right = news-arch volume gmail weather info-redshift-temp battery xkeyboard date powermenu
@@ -332,11 +332,12 @@ card = intel_backlight
 [module/cpu]
 type = internal/cpu
 interval = 0.5
-format = <label> <ramp-coreload>
-format-prefix = " "
+format = %{A1:xfce4-taskmanager & disown:}<label> <ramp-coreload>%{A}
+format-prefix = " " 
 format-prefix-foreground = ${colors.foreground-alt}
 format-underline = #ffb52a
 label = %percentage%%
+click-left = /usr/bin/xfce4-taskmanager &
 ramp-coreload-0 = ▁
 ramp-coreload-0-font = 2
 ramp-coreload-0-foreground = #aaff77
@@ -423,7 +424,7 @@ interval = 2.0
 ; Available tags:
 ; ;   <label-connected> (default)
 ; ;   <ramp-signal>
-format-connected-prefix = " "
+format-connected-prefix = %{A1:networkmanager_dmenu & disown:} %{A}
 format-connected-prefix-foreground = ${colors.foreground-alt}
 format-connected = <label-connected>
 format-connected-underline = #9f78e1
@@ -456,7 +457,7 @@ label-connected-foreground = #eefafafa
 #format-disconnected =
 #format-disconnected = <label-disconnected>
 format-disconnected-underline = ${self.format-connected-underline}
-label-disconnected = down
+label-disconnected = %{A1:networkmanager_dmenu & disown:}down%{A}
 label-disconnected-foreground = ${colors.foreground-alt}
 
 [module/eth]
@@ -482,7 +483,7 @@ interval = 10
 date =
 date-alt = " %Y-%m-%d"
 
-time = %H:%M
+time = %{A3:gsimplecal & disown:}%H:%M %{A}
 time-alt = %H:%M:%S
 
 format-prefix = 
@@ -536,7 +537,7 @@ format-charging-underline = #ffb52a
 format-discharging = <ramp-capacity> <label-discharging>
 format-discharging-underline = ${self.format-charging-underline}
 
-format-full-prefix = " "
+format-full-prefix = %{A3:xfce4-power-manager-settings & disown:}  %{A}
 format-full-prefix-foreground = ${colors.foreground-alt}
 format-full-underline = ${self.format-charging-underline}
 
@@ -550,7 +551,7 @@ animation-charging-1 = " "
 animation-charging-2 = " "
 animation-charging-foreground = ${colors.foreground-alt}
 animation-charging-framerate = 750
-
+ 
 [module/temperature]
 type = internal/temperature
 thermal-zone = 1
@@ -575,9 +576,9 @@ type = custom/script
 interval = 600
 format-prefix = " " 
 format-prefix-foreground = ${colors.foreground-alt}
-format = <label>
+format = <label> 
 format-underline = #9f78e1
-label = "%output:0:30%"
+label = %{A3:termite --exec=pacui & disown:} %output:0:30% %{A}
 exec = .config/polybar/packages.sh
 click-left=.config/polybar/packages.sh
 
@@ -607,7 +608,7 @@ type = custom/script
 interval = 5
 format-prefix = " " 
 format-prefix-foreground = ${colors.foreground-alt}
-format = <label>
+format = %{A1:/home/notis/.config/herbstluftwm/fanmenu.sh & disown:}<label> %{A}
 format-underline = #0a6cf5
 label = "%output:0:30%"
 exec = .config/polybar/fan.sh
