--- a/polybar/config
+++ b/polybar/config
@@ -97,9 +97,9 @@ font-3 = FontAwesome:size=10:weight=Regular
 font-4 = DejaVu Sans:size=10
 
 modules-left =  info-trash arch system-uptime-pretty updates cpu temperature fan memory wlan isrunning-openvpn taskwarrior
-modules-center = ewmh
+modules-center = ewmh layout
 ;hlws
-modules-right = news-arch volume gmail weather info-redshift-temp battery xkeyboard date powermenu
+modules-right = news-arch volume gmail weather info-redshift-temp battery xkeyboard date powermenu 
 
 tray-position = right
 tray-padding = 4
@@ -151,6 +151,16 @@ scroll-down       = exec herbstclient use_index -1
 scroll-up         = exec herbstclient use_index +1
 interval          = 0.7
 format-foreground = ${colors.foreground-alt}
+format-background = ${colors.background}
+format-underline = #555
+format-padding = 2
+
+[module/layout]
+type              = custom/script
+exec              = python /home/notis/.config/herbstluftwm/layout.py
+click-left       = exec herbstclient cycle_layout
+interval          = 1
+format-foreground = #9fbc00
 format-background = ${colors.background}
 format-underline = #555
 format-padding = 2
@@ -701,7 +711,7 @@ format = <label>
 format-underline = #0a6cf5
 exec = ~/.config/polybar/info-archnews.py
 interval = 40
-click-left = xdg-open https://www.newsbeast.gr
+click-left = xdg-open https://www.archlinux.org/
 
 [module/ticker-btceur]
 type = custom/script
