--- a/polybar/config
+++ b/polybar/config
@@ -54,7 +54,7 @@ font-2 = siji:pixelsize=10;1
 font-3 = FontAwesome:size=10:weight=Regular
 font-4 = DejaVu Sans:size=10
 
-modules-left = arch updates cpu temperature fan memory isrunning-openvpn
+modules-left = arch updates cpu temperature fan memory isrunning-openvpn isrunning-firewall 
 modules-center = ewmh
 modules-right = volume wlan gmail weather battery xkeyboard date
 
@@ -96,7 +96,7 @@ font-2 = Wuncon Siji:pixelsize=10:weight=Regular;1
 font-3 = FontAwesome:size=10:weight=Regular
 font-4 = DejaVu Sans:size=10
 
-modules-left =  info-trash arch system-uptime-pretty updates cpu temperature fan memory wlan isrunning-openvpn taskwarrior
+modules-left =  info-trash arch system-uptime-pretty updates cpu temperature fan memory wlan isrunning-openvpn isrunning-firewall taskwarrior
 modules-center = ewmh layout
 ;hlws
 modules-right = news-arch volume gmail weather info-redshift-temp battery xkeyboard date powermenu 
@@ -740,6 +740,15 @@ format-prefix = " "
 format-underline = #ffb52a
 click-left = gksu systemctl start openvpn-client@TunnelBearItaly.service
 click-right = gksu systemctl stop openvpn-client@TunnelBearItaly.service
+interval = 5
+
+[module/isrunning-firewall]
+type = custom/script
+exec = ~/.config/polybar/isrunning-firewall.sh
+format-prefix-foreground = ${colors.foreground-alt}
+format-prefix = " "
+format-underline = #ffb52a
+click-left = gksu gufw
 interval = 5
 
 [settings]
