--- a/polybar/config
+++ b/polybar/config
@@ -258,7 +258,7 @@ format-padding = 2
 type = internal/xkeyboard
 blacklist-0 = num lock
 
-;format-prefix = " "
+format-prefix = " "
 format-prefix-foreground = ${colors.foreground-alt}
 format-prefix-underline = ${colors.secondary}
 
