--- a/polybar/config
+++ b/polybar/config
@@ -54,9 +54,9 @@ font-2 = siji:pixelsize=10;1
 font-3 = FontAwesome:size=10:weight=Regular
 font-4 = DejaVu Sans:size=10
 
-modules-left = arch updates cpu temperature fan memory isrunning-openvpn isrunning-firewall 
-modules-center = ewmh
-modules-right = volume wlan gmail weather battery xkeyboard date
+modules-left = updates cpu temperature fan memory isrunning-openvpn isrunning-firewall wlan
+modules-center = ewmh layout
+modules-right = volume gmail weather battery xkeyboard date
 
 tray-position = right
 tray-padding = 4
@@ -99,7 +99,7 @@ font-4 = DejaVu Sans:size=10
 modules-left =  info-trash arch system-uptime-pretty updates cpu temperature fan memory wlan isrunning-openvpn isrunning-firewall taskwarrior
 modules-center = ewmh layout
 ;hlws
-modules-right = news-arch volume gmail weather info-redshift-temp battery xkeyboard date powermenu 
+modules-right = news-arch volume gmail weather battery xkeyboard date powermenu 
 
 tray-position = right
 tray-padding = 4
@@ -110,7 +110,7 @@ enable-ipc = true
 
 
 width = 100%
-height = 27
+height = 20
 
 bottom = true
 
@@ -140,9 +140,9 @@ font-1 = unifont:fontformat=truetype:size=8:antialias=false;0
 font-2 = siji:pixelsize=10;1
 font-3 = FontAwesome:size=10:weight=Regular
 
-modules-left = appmenu mpd spotify
+modules-left = appmenu arch mpd spotify
 modules-center = filesystem
-modules-right = ticker-btceur ip-wireless ip-wired
+modules-right = names taskwarrior ticker-btceur
 
 [module/hlws]
 type              = custom/script
@@ -709,9 +709,20 @@ format-prefix = " "
 format-prefix-foreground = ${colors.foreground-alt}
 format = <label>
 format-underline = #0a6cf5
-exec = ~/.config/polybar/info-archnews.py
+exec = python ~/.config/polybar/info-archnews.py 1
 interval = 40
-click-left = xdg-open https://www.archlinux.org/
+click-left = xdg-open https://www.enikos.gr/
+
+
+[module/names]
+type = custom/script
+format-prefix = " " 
+format-prefix-foreground = ${colors.foreground-alt}
+format = <label>
+format-underline = #0a6cf5
+exec = python ~/.config/polybar/info-names.py
+interval = 3600
+click-left = xdg-open http://www.eortologio.gr/rss/si_el.xml
 
 [module/ticker-btceur]
 type = custom/script
