--- a/polybar/config
+++ b/polybar/config
@@ -8,7 +8,8 @@
 ;=====================================================
 
 [colors]
-background = #bdae93
+background = #c1c4bc
+;#bdae93
 ;#3a3432
 
 background-alt = #444
@@ -62,7 +63,7 @@ font-6 = "Font Awesome 5 Brands:style=Regular:pixelsize=10;2"
 
 modules-left = updates cpu temperature fan memory isrunning-openvpn isrunning-firewall wlan
 modules-center = ewmh layout
-modules-right = volume gmail weather battery xkeyboard date
+modules-right = volume gmail weather battery xkeyboard date search
 
 tray-position = right
 tray-padding = 4
@@ -105,10 +106,10 @@ font-4 = "Font Awesome 5 Free:style=Regular:pixelsize=10;2"
 font-5 = "Font Awesome 5 Free:style=Solid:pixelsize=10;2"
 font-6 = "Font Awesome 5 Brands:style=Regular:pixelsize=10;2"
 
-modules-left =  info-trash arch system-uptime-pretty updates cpu temperature fan memory wlan isrunning-openvpn isrunning-firewall taskwarrior
+modules-left =  info-trash arch system-uptime-pretty updates cpu temperature fan memory wlan isrunning-openvpn isrunning-firewall
 modules-center = ewmh layout
 ;hlws
-modules-right = news-arch volume gmail weather battery xkeyboard date powermenu 
+modules-right = volume gmail weather battery xkeyboard date search powermenu 
 
 tray-position = right
 tray-padding = 4
@@ -140,8 +141,8 @@ border-color = #00000000
 padding-left = 2
 padding-right = 2
 
-module-margin-left = 4
-module-margin-right = 4
+module-margin-left = 1
+module-margin-right = 1
 
 font-0 = Comic Sans MS:size=10:weight=Italic
 #font-0 = Droid Sans Mono:size=10;1
@@ -173,7 +174,7 @@ type              = custom/script
 exec              = python /home/notis/.config/herbstluftwm/layout.py
 click-left       = exec herbstclient cycle_layout
 interval          = 2
-format-foreground = #83a598
+format-foreground = #665c54
 format-background = ${colors.background}
 ;format-underline = #555
 format-padding = 2
@@ -225,7 +226,7 @@ enable-scroll = false
 ; ;   %index%
 ; ; Default: %icon%  %name%
 label-active = %icon% %name%
-label-active-foreground = #1d2021
+label-active-foreground = #665c54
 label-active-background = #83a598
 label-active-underline = #83a598
 ;
@@ -262,11 +263,11 @@ label-empty-foreground = #55
 
 [module/xwindow]
 type = internal/xwindow
-label = %title: 0:30:...%
-label-maxlen = 30
+label = %title: 0:50:...%
+label-maxlen = 50
 #format-background = #808000
-format-background = #555555
-format-foreground = #FFFFFF
+format-background = ${colors.background}
+format-foreground = ${colors.foreground}
 format-padding = 2
 
 [module/xkeyboard]
@@ -606,6 +607,17 @@ format = <label>
 label = %{A3:termite --exec=pacui & disown:} %output:0:30% %{A}
 exec = .config/polybar/packages.sh
 click-left=.config/polybar/packages.sh
+
+[module/search]
+type = custom/script
+format-prefix = " " 
+format-prefix-foreground = ${colors.foreground}
+;format = <label> 
+;format-underline = #9f78e1
+;label = %{A1:catfish& disown:} %{A}
+;exec = .config/polybar/packages.sh
+exec = echo " "
+click-left=catfish
 
 [module/arch]
 type = custom/script
